# akv-cli-rs

./: .cspell.json  .gitattributes  .gitignore  .markdownlint-cli2.yaml  .taplo.toml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DEMO.md  README.md  azure.yaml  package-lock.json  package.json  rust-toolchain.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml  lsp.json
.github/skills/markdown-lint/: SKILL.md
.github/skills/spell-check/: SKILL.md
.github/workflows/: brew.yml  ci.yml  live.yml  release.yml  winget.yml
.zed/: debug.json  settings.json  tasks.json
benches/: jwe.rs
examples/: blobs.rs  printenv.rs  setup.ps1  setup.sh
infra/: main.bicep  main.bicepparam  main.parameters.json  resources.bicep
manifests/: heaths.akv.installer.yaml  heaths.akv.locale.en-US.yaml  heaths.akv.yaml
src/: cache.rs  color.rs  credentials.rs  error.rs  json.rs  jwt.rs  lib.rs  main.rs  parsing.rs
src/commands/: inject.rs  item.rs  mod.rs  read.rs  run.rs  secret.rs
src/jose/: jwe.rs  mod.rs
src/pty/: mod.rs  posix.rs  windows.rs
src/writer/: buffer.rs  mod.rs
tests/: Certificates.Tests.ps1  Encrypt.Tests.ps1  Keys.Tests.ps1  Read.Tests.ps1  Secrets.Tests.ps1  test.ps1
