[package]
name = "akv-cli"
version = "0.9.0"
edition = "2021"
description = """
The Azure Key Vault CLI (unofficial) can read secrets from Key Vault,
securely pass secrets to other commands or inject them into configuration files,
encrypt and decrypt secrets, and managed keys and secrets in Key Vault.
"""
authors = ["Heath Stewart (https://github.com/heaths)"]
repository = "https://github.com/heaths/akv-cli-rs"
license = "MIT"
rust-version = "1.88"

[features]
default = ["color"]
color = ["clap/color", "colored_json", "yansi"]

[dependencies]
async-lock = "3.4.0"
async-stream = "0.3.6"
async-trait = "0.1.88"
azure_core = { version = "0.34.0", default-features = false, features = [
    "reqwest",
    "reqwest_gzip",
    "tokio",
] } # Use reqwest default-tls (aws-lc-rs) instead of native-tls.
azure_identity = { version = "0.34.0", default-features = false, features = [
    "tokio",
] }
azure_security_keyvault_certificates = { version = "0.12.0", default-features = false }
azure_security_keyvault_keys = { version = "0.13.0", default-features = false }
azure_security_keyvault_secrets = { version = "0.13.0", default-features = false }
clap = { version = "4.5.28", default-features = false, features = [
    "derive",
    "env",
    "error-context",
    "help",
    "std",
    "string",
    "suggestions",
    "usage",
] }
clap_complete = "4.5.46"
colored_json = { version = "5.0.0", optional = true }
dotazure = "0.2.0"
dotenvy = "0.15.7"
futures = "0.3.31"
indicatif = "0.18.0"
libc = "0.2.171"
openssl = "0.10.78" # Continue to use openssl for JOSE: https://github.com/aws/aws-lc-rs/issues/617
prettytable-rs = "0.10.0"
reqwest = "0.13.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = "0.3.47"
timeago = "0.4.2"
tokio = { version = "1.43.0", features = [
    "io-std",
    "io-util",
    "macros",
    "rt",
    "rt-multi-thread",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = [
    "env-filter",
    "local-time",
] }
url = "2.5.4"
yansi = { version = "1.0.1", features = [
    "detect-env",
    "detect-tty",
], optional = true }

[dev-dependencies]
async-trait = "0.1.88"
azure_storage_blob = { version = "0.11.0", default-features = false, features = [
    "tokio",
] }
criterion = "0.6.0"
wildcard = "0.3.0"

[profile.release]
opt-level = "s"
panic = "abort"
strip = "debuginfo"

[lints.rustdoc]
bare_urls = "allow"

[[bench]]
name = "jwe"
harness = false

[[example]]
name = "printenv"
required-features = ["color"]

[package.metadata.docs.rs]
all-features = true
