[package]
name = "akv-cli"
version = "0.11.0"
edition = "2021"
description = """
The Azure Key Vault CLI (unofficial) can read secrets from Key Vault,
securely pass secrets to other commands or inject them into configuration files,
encrypt and decrypt secrets, and managed keys and secrets in Key Vault.
"""
authors = ["Heath Stewart (https://github.com/heaths)"]
repository = "https://github.com/heaths/akv-cli-rs"
license = "MIT"
rust-version = "1.88"

[features]
default = ["color"]
color = ["clap/color", "colored_json", "yansi"]

[dependencies]
async-lock = "3.4.0"
async-stream = "0.3.6"
async-trait = "0.1.88"
aws-lc-rs = "1.17.0"
azure_core = "1.0.0"
azure_identity = { version = "1.0.0", features = ["tokio"] }
azure_security_keyvault_certificates = "1.0.0"
azure_security_keyvault_keys = "1.0.0"
azure_security_keyvault_secrets = "1.0.0"
clap = { version = "4.5.28", default-features = false, features = [
    "derive",
    "env",
    "error-context",
    "help",
    "std",
    "string",
    "suggestions",
    "usage",
] }
clap_complete = "4.6.5"
colored_json = { version = "5.0.0", optional = true }
dotazure = "0.2.0"
dotenvy = "0.15.7"
futures = "0.3.31"
indicatif = "0.18.0"
libc = "0.2.186"
prettytable-rs = "0.10.0"
reqwest = "0.13.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.150"
time = "0.3.47"
timeago = "0.6.0"
tokio = { version = "1.52.3", features = [
    "io-std",
    "io-util",
    "macros",
    "rt",
    "rt-multi-thread",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = [
    "env-filter",
    "local-time",
] }
url = "2.5.4"
yansi = { version = "1.0.1", features = [
    "detect-env",
    "detect-tty",
], optional = true }

[dev-dependencies]
async-trait = "0.1.88"
azure_storage_blob = "1.0.0"
criterion = "0.8.2"
wildcard = "0.3.0"

[profile.release]
opt-level = "s"
panic = "abort"
strip = "debuginfo"

[lints.rustdoc]
bare_urls = "allow"

[[bench]]
name = "jwe"
harness = false

[[example]]
name = "printenv"
required-features = ["color"]

[package.metadata.docs.rs]
all-features = true
